Second commit, this time changing the repo.

--- a/README
+++ b/README
@@ -1,3 +1,6 @@
 This is the first file in a sandbox to be used for
 some initial experiments with git under github and
 bitbucket (and maybe gitlab).
+
+Now we add some new text to this first file and get
+it committed.
