Fix for issue #1.

--- a/README
+++ b/README
@@ -1,3 +1,5 @@
+    ReadMe for sandbox-201308 (created 16-Aug-2013)
+
 This is the first file in a sandbox to be used for
 some initial experiments with git under github and
 bitbucket (and maybe gitlab).
